# conviction-mcp

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/conviction_mcp/: __init__.py  server.py
src/conviction_mcp/tools/: analyze.py  portfolio.py  zsxq.py
src/conviction_mcp/utils/: config.py  market_data.py  ocr.py
