[project]
name = "conviction-mcp"
version = "0.1.0"
description = "MCP server for personal investment portfolio analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "yfinance>=0.2.0",
    "pyyaml>=6.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
conviction-mcp = "conviction_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conviction_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
